--- a/project/templates/inc/navbar.html
+++ b/project/templates/inc/navbar.html
@@ -22,7 +22,8 @@
 
             <div class="text-end">
                 <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+                <a href="{% url 'accounts:registration'%}"><button type="button"
+                        class="btn btn-warning">Register</button></a>
             </div>
         </div>
     </div>
