--- a/project/accounts/templates/accounts/otp.html
+++ b/project/accounts/templates/accounts/otp.html
@@ -2,10 +2,10 @@
 
 
 {%block content %}
-<form action="" method="post" novalidate>
+<form action="" method="post">
     {%csrf_token%}
     {{form.as_p}}
-    <input type="submit" value="REGISTER">
+    <input type="submit" value="SEND">
 </form>
 
 {%endblock%}
