--- a/project/core/templates/core/home-page.html
+++ b/project/core/templates/core/home-page.html
@@ -39,3 +39,35 @@
     </div>
 </div>
 {%endblock header%}
+
+
+{% block content %}
+<div class="container">
+    {% for category in categories %}
+
+    <div class="btn-group">
+        <a href="{{ category.get_absolute_url }}" class="btn btn-danger">{{ category.name }}</a>
+        <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <span class="visually-hidden">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu">
+            {% for sub in category.subcategory.all %}
+            <li><a class="dropdown-item" href="{{ sub.get_absolute_url }}">{{ sub.name }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
+
+    {% endfor %}
+    {% for product in products%}
+    <div class="card" style="width: 18rem;">
+        <img src="{{product.image.url}}" class="card-img-top">
+        <div class="card-body">
+            <h5 class="card-title">{{product.name}}</h5>
+            <a href="{{product.get_absolute_url}}" class="btn btn-primary">Detail</a>
+        </div>
+    </div>
+    {%endfor%}
+</div>
+
+{% endblock content %}
