--- a/project/templates/inc/navbar.html
+++ b/project/templates/inc/navbar.html
@@ -8,11 +8,15 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2" style="color: #7b4605;">Home</a></li>
+                <li><a href="{% url 'core:home-page' %}" class="nav-link px-2" style="color: #7b4605;">Home</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+
+                {% if request.user.is_admin %}
+                <li><a class="nav-link active" href="{% url 'products:bucket' %}">Bucket</a></li>
+                {% endif %}
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -21,9 +25,15 @@
             </form>
 
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
+                {% if request.user.is_authenticated %}
+                <a class="nav-link active" href="{% url 'accounts:user_logout' %}"><button type="button"
+                        class="btn btn-warning">Logout</button></a>
+                {% else %}
+                <a class="nav-link active" href="{% url 'accounts:user_login' %}"><button type="button"
+                        class="btn btn-outline-light me-2">Login</button></a>
                 <a href="{% url 'accounts:registration'%}"><button type="button"
                         class="btn btn-warning">Register</button></a>
+                {% endif %}
             </div>
         </div>
     </div>
