chore: search form's url updated

--- a/project/templates/inc/navbar.html
+++ b/project/templates/inc/navbar.html
@@ -19,9 +19,10 @@
                 {% endif %}
             </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark text-bg-white" placeholder="Search..."
-                    aria-label="Search">
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search"
+                action="{% url 'core:search_products' %}">
+                <input name="searchbox" type="search" class="form-control form-control-dark text-bg-white"
+                    placeholder="Search..." aria-label="Search">
             </form>
 
             <div class="text-end">
