--- a/project/products/templates/products/product-detail.html
+++ b/project/products/templates/products/product-detail.html
@@ -15,7 +15,52 @@
             {% csrf_token %}
             {{ form }}
             <input type="submit" value="add to cart">
+        </form>
     </div>
+    <br><br><br>
+    <div>
+        {% if request.user.is_authenticated %}
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <input type="submit" value="Send">
+        </form> <br />
+        {% else %}
+        <p class="alert alert-danger">Only logged in users can comment.</p>
+        {% endif %}
+
+    </div>
+    <br><br><br>
+
+    <div>
+        {% for comment in comments %}
+        <div class="card bg-dark text-white">
+            <p class="card-header">{{ comment.user }} | {{ comment.created|timesince }}</p>
+            <p class="card-body">{{ comment.body }}</p>
+
+            {% if request.user.is_authenticated %}
+            <form action="{% url 'products:add_reply' product.id comment.id %}" method="post">
+                {% csrf_token %}
+                {{ reply_form.as_p }}
+                <input type="submit" value="send">
+            </form>
+            {% endif %}
+
+
+            {% with replies=comment.rcomments.all %}
+            {% for reply in replies %}
+            <p class="bg-primary p-3 m-2">{{ reply.user }} <br /> {{ reply.body }}</p>
+            {% endfor %}
+            {% endwith %}
+
+
+        </div><br />
+        {% empty %}
+        <p>No comments yet!</p>
+        {% endfor %}
+    </div>
+
+
 </div>
 
 {% endblock content %}
