chore: complete reset password page V1 created

--- a/project/accounts/templates/accounts/complete_reset_password.html
+++ b/project/accounts/templates/accounts/complete_reset_password.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
+
+
 {% block content %}
-<p>your password changed.</p>
-{% endblock %}
+<div class="d-flex align-items-center justify-content-center vh-100 bg-success">
+    <div class="text-center">
+        <h1 class="display-1 fw-bold">DONE!</h1>
+        <p class="fs-3">YOUR PASSWORD CHANGED SUCCESSFULY!</p>
+
+        <a href="{% url 'accounts:user_login' %}" class="btn btn-dark">Login</a>
+    </div>
+</div>
+
+{% endblock content %}
