chore: confirm reset password page V1 created

--- a/project/accounts/templates/accounts/confirm_reset_password.html
+++ b/project/accounts/templates/accounts/confirm_reset_password.html
@@ -1,12 +1,39 @@
 {% extends 'base.html' %}
+{% load static %}
+
+
+
+{% block title %}
+change password
+{% endblock title %}
+
+{% block link %}
+<link rel="stylesheet" href="{% static 'css/login-signin.css' %}">{% endblock link %}
+
 
 {% block content %}
 {% if validlink %}
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Change">
-</form>
+<div class="d-flex justify-content-center my-5 py-5 mb-5">
+    <form action="" method="post">
+        {% csrf_token %}
+
+        <div class="card bg-dark">
+            <a class="singup">LogIn</a>
+            <div class="inputBox1">
+                {{form.new_password1}}
+                <span class="user">New Password</span>
+            </div>
+
+            <div class="inputBox">
+                {{form.new_password2}}
+                <span>Confirm</span>
+            </div>
+            <input class="enter" type="submit" value="Change">
+        </div>
+    </form>
+
+
+</div><br><br><br><br><br><br><br><br><br><br><br>
 {% else %}
 <p>this link is not valid. please try again.</p>
 {% endif %}
