chore: done reset password page V1 created

--- a/project/accounts/templates/accounts/done_reset_password.html
+++ b/project/accounts/templates/accounts/done_reset_password.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
 
+
+
 {% block content %}
-<p>we sent you an email.</p>
-{% endblock %}
+<div class="d-flex align-items-center justify-content-center vh-100 bg-success">
+    <div class="text-center">
+        <h1 class="display-1 fw-bold">DONE!</h1>
+        <p class="fs-3">WE SENT YOU AN EMAIL SO YOU CAN RESET YOUR PASSWORD!</p>
+        <a href="{% url 'core:home-page' %}" class="btn btn-dark">Go Home</a>
+    </div>
+</div>
+
+{% endblock content %}
