--- a/project/accounts/templates/accounts/otp.html
+++ b/project/accounts/templates/accounts/otp.html
@@ -1,11 +1,37 @@
 {% extends 'base.html' %}
+{% load static %}
 
 
-{%block content %}
-<form action="" method="post">
-    {%csrf_token%}
-    {{form.as_p}}
-    <input type="submit" value="SEND">
-</form>
 
-{%endblock%}
+
+
+{% block title %}
+Otp
+{% endblock title %}
+
+{% block link %}
+<link rel="stylesheet" href="{% static 'css/otp.css' %}">{% endblock link %}
+
+{% block header %}
+<div class="d-flex justify-content-center my-5 py-5 mb-5">
+    <form class="form bg-dark" method="post">
+        <div class="content">
+            <p align="center">OTP Verification</p>
+            <div class="inp">
+                {%csrf_token%}
+                {{form.code}}
+            </div>
+            <button>Verify</button>
+            <svg class="svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#ffc107"
+                    d="M56.8,-23.9C61.7,-3.2,45.7,18.8,26.5,31.7C7.2,44.6,-15.2,48.2,-35.5,36.5C-55.8,24.7,-73.9,-2.6,-67.6,-25.2C-61.3,-47.7,-30.6,-65.6,-2.4,-64.8C25.9,-64.1,51.8,-44.7,56.8,-23.9Z"
+                    transform="translate(100 100)" class="path"></path>
+            </svg>
+        </div>
+
+    </form>
+
+</div><br><br><br><br><br><br><br><br><br><br><br>
+
+
+{% endblock header %}
