chore:  reset password page V1 created

--- a/project/accounts/templates/accounts/reset_password.html
+++ b/project/accounts/templates/accounts/reset_password.html
@@ -1,9 +1,32 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block content %}
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send">
-</form>
-{% endblock %}
+{% block title %}
+reset password
+{% endblock title %}
+
+{% block link %}
+<link rel="stylesheet" href="{% static 'css/login-signin.css' %}">{% endblock link %}
+
+
+{% block header %}
+<div class="d-flex justify-content-center my-5 py-5 mb-5">
+    <form action="" method="post">
+        {% csrf_token %}
+
+        <div class="card bg-dark">
+            <a class="singup">RESET PASSWORD</a>
+
+
+            <div class="inputBox">
+                {{form.email}}
+                <span>Email</span>
+            </div>
+            <input class="enter" type="submit" value="SEND">
+        </div>
+    </form>
+
+
+</div><br><br><br><br><br><br><br><br><br><br><br>
+
+{% endblock header %}
