chore: home page V1 created

--- a/project/core/templates/core/home-page.html
+++ b/project/core/templates/core/home-page.html
@@ -9,65 +9,36 @@
                 alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
-            <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-                popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-                extensive prebuilt components, and powerful JavaScript plugins.</p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-            </div>
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">MELO SHOP</h1>
+            <p class="lead">In this online store you can find the best drinks and devices and enjoy the best experiences
+                with your friends.</p>
         </div>
     </div>
 </div>
-<div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-            <img src="../../../static/img/coffeeVsTea-1030x512.jpg" class="d-block mx-lg-auto img-fluid"
-                alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
-            <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-                popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-                extensive prebuilt components, and powerful JavaScript plugins.</p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-            </div>
-        </div>
-    </div>
-</div>
+
 {%endblock header%}
 
 
 {% block content %}
-<div class="container">
-    {% for category in categories %}
+<p class="container" style="font-size: large;">PRODUCTS</p>
+<div class="px-2 container">
+    <hr class="singleline">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
 
-    <div class="btn-group">
-        <a href="{{ category.get_absolute_url }}" class="btn btn-danger">{{ category.name }}</a>
-        <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <span class="visually-hidden">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-            {% for sub in category.subcategory.all %}
-            <li><a class="dropdown-item" href="{{ sub.get_absolute_url }}">{{ sub.name }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
-
-    {% endfor %}
-    {% for product in products%}
-    <div class="card" style="width: 18rem;">
-        <img src="{{product.image.url}}" class="card-img-top">
-        <div class="card-body">
-            <h5 class="card-title">{{product.name}}</h5>
-            <a href="{{product.get_absolute_url}}" class="btn btn-primary">Detail</a>
+        {% for product in products%}
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="{{product.image.url}}" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">{{product.name}}</h5>
+                    <a href="{{product.get_absolute_url}}" class="btn btn-warning">Detail & Order</a>
+                </div>
+            </div>
         </div>
+
+        {%endfor%}
     </div>
-    {%endfor%}
 </div>
+
 
 {% endblock content %}
