chore: change name of the form

--- a/project/accounts/templates/accounts/confirm_reset_password.html
+++ b/project/accounts/templates/accounts/confirm_reset_password.html
@@ -18,7 +18,7 @@ change password
         {% csrf_token %}
 
         <div class="card bg-dark">
-            <a class="singup">LogIn</a>
+            <a class="singup">RESET PASSWORD</a>
             <div class="inputBox1">
                 {{form.new_password1}}
                 <span class="user">New Password</span>
